--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
          <header id='header' class='d-flex justify-content-between'>
 		      <img class='img-fluid' src='./images/logo.svg' alt='' width="176" height="52">
-              <nav class="nav d-flex">
+              <nav aria-label='top navigation' class="nav d-flex">
                  <a href="#" class="nav-item nav-link active">Features</a>
                  <a href="#" class="nav-item nav-link">Team</a>
                  <a href="#" class="nav-item nav-link">Sign In</a>
