--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <span>example@fylo.com</span>
 					  </div>
 				   </address>
-                   <nav class='d-flex flex-xxl-row flex-column' aria-label=''>
+                   <nav class='d-flex flex-xxl-row flex-column' aria-label='Continued navigation.'>
 				     <div class='d-flex flex-column  ms-2 ms-xxl-0 mb-2 mb-xxl-0 me-xxl-3'>
                        <a href='#'>About Us</a>
                        <a href='#'>Jobs</a>
